--- a/Project/index.html
+++ b/Project/index.html
@@ -384,7 +384,7 @@
                     <div class="d-flex justify-content-center mx-auto col-lg-5 col-md-7 col-12">
                         <p class="mr-4">
                             <i class="fa fa-envelope-o mr-1"></i>
-                            <a href="mailto:jayparmar7654321@gmail.com">Contact Us</a>
+                            <a href="ravulabhanushankar07@gmail.com">Contact Us</a>
                         </p>
 
                         <!-- <p><i class="fa fa-phone mr-1"></i> 010-020-0840</p> -->
